# kamaji

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  nuxt.config.ts  package-lock.json  package.json
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
assets/: index.html
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_config_table.rs
migrations/2023-01-29-013059_create_config/: up.sql
src/: config.rs  database.rs  error.rs  events.rs  http_server.rs  logging.rs  main.rs  models.rs  routes.rs  schema.rs  state.rs  twitch_irc.rs
src/client/: spa-loading-template.html
src/config/: error.rs  mod.rs
src/database/: error.rs  mod.rs
src/events/: error.rs  mod.rs
src/http/: error.rs  mod.rs
src/http/routes/: assets.rs  mod.rs  oauth.rs
src/http/routes/api/: mod.rs  users.rs
src/http/services/: mod.rs  users.rs
src/irc/: error.rs  mod.rs
src/routes/: mod.rs
src/routes/api/: mod.rs  users.rs
src/server/: main.rs  routes.rs  state.rs
src/server/database/: mod.rs
src/server/database/migrations/: 0001_config.sql
src/server/routes/: mod.rs
src/services/: users.rs
src/state/: error.rs  mod.rs
